apps/music/mopidy-service-snapcast-stream.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: private-pool
    metallb.universe.tf/allow-shared-ip: private-main
  labels:
    app.kubernetes.io/name: mopidy
  name: mopidy-snapcast-stream
spec:
  type: LoadBalancer
  loadBalancerIP: 172.22.18.32
  ports:
  - name: snapcast-stream
    port: 31704
    targetPort: snapcast-stream
  selector:
    app.kubernetes.io/name: mopidy
