apps/music/mopidy-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mopidy
  name: mopidy-web
spec:
  ports:
  - name: http
    port: 6680
    targetPort: http
  selector:
    app.kubernetes.io/name: mopidy
